@@ -1,6 +1,8 @@
 module TagsHelper
   # See the README for an example using tag_cloud.
   def tag_cloud(tags, classes)
+    return if tags.empty?
+    
     max_count = tags.sort_by(&:count).last.count.to_f
     
     tags.each do |tag|
